syntax="proto3";
package server;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/snowzach/gogrpcapi/server/rpc";

service VersionRPC {

    rpc Version(google.protobuf.Empty) returns (VersionResponse) {
        option (google.api.http) = {
            get: "/version"
        };
    }

}

message VersionResponse {
    string version = 1;
}
